# ion_deprecated2

./: .gitignore  .qmake.stash  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  INSTALL.md  LICENSE  Makefile.Debug  Makefile.Release  Makefile.am  README.md  configure.ac  ion-qt.pro  ion.pro  ioncoin.conf  libionconsensus.pc.in  object_script.ion-qt.Release
.github/: ISSUE_TEMPLATE.md
.tx/: config
build-aux/m4/: ion_find_bdb48.m4  ion_qt.m4  ion_subdir_to_include.m4
contrib/: README.md  UbuntuPPA.md  gitian-build.sh  ion-qt.pro  iond.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  ion-qt.desktop  ion-qt.manpages  ion-tx.bash-completion  ion-tx.install  ion-tx.manpages  iond.bash-completion  iond.manpages  rules  watch
contrib/devtools/: README.md  copyright_header.py  footer.h2m  gen-manpages.sh  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-keys/: A8D009CB_RandomDevs.pgp.sig  BA6683BA_cevap_public.asc.sig  README.md  aspa-04388FE4284E36A8A21DCED61BA70476380D5F9F.asc  bige-B6167EA0C2F2E8D23CFE42EBB89D80848821BE08.asc  ceforce-ACC3441E554177A103ABA3136E8B8D94B13E2AE6.asc  ionomy@i2pmail.org_A8D009CB_KeypairBackup.asc  jord-4E0E259A05AACB3F4F22D949CE3CAF2F7F5D429D.asc  psionic-D1982E4455D8D7D9B4B37E8841C943A6CF10AC0E.asc
contrib/init/: README.md  iond.conf  iond.init  iond.openrc  iond.openrcconf  iond.service  org.ion.bitcoind.plist
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-create.sh  fancy.plist  macdeployqtplus  notes.txt
contrib/publickeys/: Readme.md
contrib/qos/: README.md  tc.sh
depends/: README.md  description.md
doc/: Doxyfile  Doxyfile.in  README  README.md  README_osx.md  README_windows.txt  REST-interface.md  assets-attribution.md  benchmarking.md  bips.md  build-msw.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  coding.txt  developer-notes.md  dnsseed-policy.md  files.md  fuzzing.md  gitian-building.md  init.md  readme-qt.rst  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  ssl.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.md  zmq.md
doc/man/: iond.1  (+4 more)
share/: genbuild.sh  setup.nsi.in
src/: Makefile.am  Makefile.leveldb.include  Makefile.qt.include  activemasternode.cpp  activemasternode.h  addrman.cpp  addrman.h  alert.cpp  alert.h  allocators.cpp  allocators.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bitcoind.cpp  chainparams.cpp  chainparams.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  clientversion.h  coincontrol.h  compat.h  core.h  core_io.h  core_memusage.h  core_read.cpp  core_write.cpp  crypter.cpp  crypter.h  cuckoocache.h  darksend.cpp  darksend.h  db.cpp  db.h  ecwrapper.h  hash.h  indirectmap.h  (+101 more)
src/bench/: bench.cpp  bench.h  checkblock.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: LICENSE.txt  json_spirit_value.h  json_spirit_writer_template.h
src/leveldb/: LICENSE
src/qt/: addeditatomnode.cpp  addressbookpage.cpp  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.h  atomnodeconfigdialog.h  bantablemodel.h  bitcoin.cpp  bitcoin.qrc  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  blockbrowser.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  guiconstants.h  guiutil.cpp  guiutil.h  ion.cpp  ion.qrc  ionaddressvalidator.cpp  ionaddressvalidator.h  ionamountfield.cpp  ionamountfield.h  iongui.cpp  iongui.h  ionstrings.cpp  ionunits.cpp  ionunits.h  macdockiconhandler.h  macdockiconhandler.mm  masternodemanager.cpp  masternodemanager.h  messagemodel.cpp  notificator.h  optionsdialog.cpp  optionsmodel.cpp  (+29 more)
src/qt/forms/: aboutdialog.ui  addeditadrenalinenode.ui  addeditatomnode.ui  addressbookpage.ui  askpassphrasedialog.ui  atomnodeconfigdialog.ui  coincontroldialog.ui  darksendconfig.ui  editaddressdialog.ui  masternodemanager.ui  multisigaddressentry.ui  multisigdialog.ui  multisiginputentry.ui  optionsdialog.ui  overviewpage.ui  qrcodedialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  stashedsendconfig.ui  transactiondescdialog.ui
src/qt/locale/: bitcoin_af_ZA.ts  bitcoin_ar.ts  bitcoin_be_BY.ts  bitcoin_bg.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_ca_ES.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_MX.ts  bitcoin_es_UY.ts  bitcoin_et.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fa_IR.ts  bitcoin_fi.ts  bitcoin_fr.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_he.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_it.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ko_KR.ts  bitcoin_ky.ts  bitcoin_la.ts  (+147 more)
src/qt/plugins/mrichtexteditor/: LICENSE.LGPL
src/qt/res/: bitcoin-qt.rc  ion-qt.rc
src/qt/res/src/: about.xcf  about2.xcf  about3.xcf  about4.xcf  about5.xcf
src/qt/test/: uritests.cpp
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_ion_NativeSecp256k1.c  org_ion_NativeSecp256k1.h
src/secp256k1/src/java/org/ion/: NativeSecp256k1.java
src/support/: cleanse.h
src/test/: README  base58_tests.cpp  getarg_tests.cpp  key_tests.cpp  netbase_tests.cpp  wallet_tests.cpp
src/zmq/: zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp
test/: README.md  config.ini.in
(+118 files in other folders)
